clusters/cluster2/monitoring/scrape-aws-udp-relay-1.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  annotations:
    tailscale.com/tailnet-ip: 100.123.191.46
  name: udp-relay-1
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
  ports:
    - port: 8080
      protocol: TCP
      name: web
