clusters/cluster2/monitoring/scrape-aws-udp-relay-2.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  annotations:
    tailscale.com/tailnet-ip: 100.74.226.3
  name: udp-relay-2
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
  ports:
    - port: 8080
      protocol: TCP
      name: web
