clusters/cluster2/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana-cluster2
